--- a/src/config.json
+++ b/src/config.json
@@ -1,16 +1,15 @@
 {
-  "name": "SSF2ModList",
-  "version": "1.1.3.2",
-  "ssf2-mods": [
-    {
-      "folder-name": "Sunset-Hill-FD ",
-      "display-name": "Sunset Hill FD",
-      "type": "stage",
-      "version": "2.3",
-      "id": "475219218",
-      "repository": "https://github.com/pecefulpro/Sunset-Hill-FD",
-      "description": "Replaces SSF2 final destination with a Sunset Hill alt",
-      "author": "Doppy"
-    }
-  ]
+   "Info": {
+      "Type": "Stage",
+      "Version": "1.3.1.2",
+      "Creators": "Doppy"
+   },
+   "Stage": {
+      "StageName:": "Final Destination",
+      "GUID": "4305ad41-d77d-4762-9c4d-5483c5c40428",
+      "Image": true,
+      "displayName": "Sunset Hills",
+      "fileName": "sunset_hill_FD.ssf",
+      "description": "A sonic mod over Final Destination"
+   }
 }
